build/log/idf_py_stdout_output_14744
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D D:\esp-test\softAP\build\bootloader && C:\Users\user\.espressif\python_env\idf6.1_py3.13_env\Scripts\python.exe D:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/esp-test/softAP/build/bootloader/bootloader.bin"
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/softap_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/softap_example_main.c.obj 
ccache C:\Users\user\.espressif\tools\riscv32-esp-elf\esp-15.2.0_20251204\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2748-g490691bc61\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp-test/softAP/build/config -ID:/esp-test/softAP/main -ID:/esp/esp-idf/components/esp_libc/platform_include -ID:/esp/esp-idf/components/freertos/config/include -ID:/esp/esp-idf/components/freertos/config/include/freertos -ID:/esp/esp-idf/components/freertos/config/riscv/include -ID:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -ID:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -ID:/esp/esp-idf/components/freertos/esp_additions/include -ID:/esp/esp-idf/components/esp_hw_support/include -ID:/esp/esp-idf/components/esp_hw_support/include/soc -ID:/esp/esp-idf/components/esp_hw_support/ldo/include -ID:/esp/esp-idf/components/esp_hw_support/debug_probe/include -ID:/esp/esp-idf/components/esp_hw_support/etm/include -ID:/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -ID:/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -ID:/esp/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -ID:/esp/esp-idf/components/esp_hw_support/power_supply/include -ID:/esp/esp-idf/components/esp_hw_support/modem/include -ID:/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -ID:/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -ID:/esp/esp-idf/components/esp_hw_support/port/esp32c3/include -ID:/esp/esp-idf/components/heap/include -ID:/esp/esp-idf/components/heap/tlsf -ID:/esp/esp-idf/components/log/include -ID:/esp/esp-idf/components/soc/include -ID:/esp/esp-idf/components/soc/esp32c3 -ID:/esp/esp-idf/components/soc/esp32c3/include -ID:/esp/esp-idf/components/soc/esp32c3/register -ID:/esp/esp-idf/components/hal/platform_port/include -ID:/esp/esp-idf/components/hal/esp32c3/include -ID:/esp/esp-idf/components/hal/include -ID:/esp/esp-idf/components/esp_rom/include -ID:/esp/esp-idf/components/esp_rom/esp32c3/include -ID:/esp/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -ID:/esp/esp-idf/components/esp_rom/esp32c3 -ID:/esp/esp-idf/components/esp_common/include -ID:/esp/esp-idf/components/esp_system/include -ID:/esp/esp-idf/components/esp_system/port/soc -ID:/esp/esp-idf/components/esp_system/port/include/riscv -ID:/esp/esp-idf/components/esp_system/port/include/private -ID:/esp/esp-idf/components/esp_stdio/include -ID:/esp/esp-idf/components/riscv/include -ID:/esp/esp-idf/components/esp_hal_gpio/include -ID:/esp/esp-idf/components/esp_hal_gpio/esp32c3/include -ID:/esp/esp-idf/components/esp_hal_usb/include -ID:/esp/esp-idf/components/esp_hal_usb/esp32c3/include -ID:/esp/esp-idf/components/esp_hal_pmu/include -ID:/esp/esp-idf/components/esp_hal_pmu/esp32c3/include -ID:/esp/esp-idf/components/esp_hal_ana_conv/include -ID:/esp/esp-idf/components/esp_hal_ana_conv/esp32c3/include -ID:/esp/esp-idf/components/esp_hal_dma/include -ID:/esp/esp-idf/components/esp_hal_dma/esp32c3/include -ID:/esp/esp-idf/components/lwip/include -ID:/esp/esp-idf/components/lwip/include/apps -ID:/esp/esp-idf/components/lwip/lwip/src/include -ID:/esp/esp-idf/components/lwip/port/include -ID:/esp/esp-idf/components/lwip/port/freertos/include -ID:/esp/esp-idf/components/lwip/port/esp32xx/include -ID:/esp/esp-idf/components/lwip/port/esp32xx/include/arch -ID:/esp/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/esp/esp-idf/components/esp_wifi/include -ID:/esp/esp-idf/components/esp_wifi/include/local -ID:/esp/esp-idf/components/esp_wifi/wifi_apps/include -ID:/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -ID:/esp/esp-idf/components/esp_event/include -ID:/esp/esp-idf/components/esp_phy/include -ID:/esp/esp-idf/components/esp_phy/esp32c3/include -ID:/esp/esp-idf/components/esp_netif/include -ID:/esp/esp-idf/components/nvs_flash/include -ID:/esp/esp-idf/components/esp_partition/include -ID:/esp/esp-idf/components/esp_blockdev/include -ID:/esp/esp-idf/components/esp_http_server/include -ID:/esp/esp-idf/components/http_parser -ID:/esp/esp-idf/components/esp_adc/include -ID:/esp/esp-idf/components/esp_adc/interface -ID:/esp/esp-idf/components/esp_adc/esp32c3/include @"D:/esp-test/softAP/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp-test/softAP=. -fmacro-prefix-map=D:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/softap_example_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\softap_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/softap_example_main.c.obj -c D:/esp-test/softAP/main/softap_example_main.c
D:/esp-test/softAP/main/softap_example_main.c: In function 'app_main':
D:/esp-test/softAP/main/softap_example_main.c:245:21: error: 'ADC_ATTEN_DB_11' undeclared (first use in this function); did you mean 'ADC_ATTEN_DB_12'?
  245 |         .atten    = ADC_ATTEN_DB_11,
      |                     ^~~~~~~~~~~~~~~
      |                     ADC_ATTEN_DB_12
D:/esp-test/softAP/main/softap_example_main.c:245:21: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
